# Varianta

./: .env.example  .gitignore  Cargo.toml  README.md  gambit_product_spec.md  index.html  package-lock.json  package.json  vite.config.ts
crates/gambit-core/: Cargo.toml
crates/gambit-core/src/: lib.rs
crates/gambit-engine/: Cargo.toml
crates/gambit-engine/src/: concepts.rs  lib.rs
crates/gambit-ingest/: Cargo.toml
crates/gambit-ingest/src/: lib.rs
crates/gambit-pgn/: Cargo.toml
crates/gambit-pgn/src/: lib.rs
crates/varianta-storage/: Cargo.toml
crates/varianta-storage/src/: lib.rs
docs/: positional-classification-design.md  puzzle-trainer-design.md
public/: lichess-openings.json
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: ChessBoard.vue  Drill.vue  GameDetailView.vue  GamePuzzles.vue  GamesView.vue  LichessImporter.vue  LineCreator.vue  OpeningExplorer.vue  SettingsView.vue
src/components/UI/: LineTree.vue  MiniBoard.vue  Sidebar.vue
src/composables/: useAnalysis.ts  useChessGame.ts  useEngine.ts  useGames.ts  useUserLinesDb.ts
src/data/: openingsTree.ts  treeUtils.ts
src/services/: gemini.ts  lichessExplorer.ts  lichessOpenings.ts
src/types/: chess.ts
src/utils/: pgnParser.ts
tools/: export-legacy-repertoire.js
