[workspace]
resolver = "2"
members = [
    "src-tauri",
    # Gambit backend crates land here, e.g. "crates/gambit-core", "crates/gambit-engine".
    # "crates/*",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["agene0001"]
# edition 2024 requires Rust >= 1.85
rust-version = "1.85"

# Shared dependency versions for the app crate and future Gambit crates.
[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
