[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/varianta-storage",
    # Gambit (game import + analysis) crates:
    "crates/gambit-core",
    "crates/gambit-ingest",
    "crates/gambit-engine",
    "crates/gambit-pgn",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["agene0001"]
# edition 2024 requires Rust >= 1.85
rust-version = "1.85"

# Shared dependency versions for the app crate and future Gambit crates.
[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
