[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85" # edition 2024 requires Rust >= 1.85

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.33"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
varianta-storage = { path = "../crates/varianta-storage" }
gambit-core = { path = "../crates/gambit-core" }
gambit-ingest = { path = "../crates/gambit-ingest" }
gambit-engine = { path = "../crates/gambit-engine" }
