[package]
name = "gambit-pgn"
version = "0.1.0"
description = "Gambit PGN parsing: PGN movetext -> per-ply FEN positions (shakmaty)"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
gambit-core = { path = "../gambit-core" }
shakmaty = "0.30"
pgn-reader = "0.29"
thiserror.workspace = true
